# python-kickstart

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
package_name/: hello_world.py
tests/: example_test.py
